--- a/css/styles.css
+++ b/css/styles.css
@@ -101,7 +101,7 @@ h3 {
 }
 
 h4 {
-    font-size: 50px;
+    font-size: 36px;
     font-weight: 700;
     color: var(--bg-variant);
 }
@@ -608,7 +608,9 @@ footer {
     }
 
     h4 {
-        font-size: 22px;
+        font-size: 24px;
+        margin-top: 60px;
+        margin-bottom: -5px;
     }
 
     h5 {
